--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "owner": "628xxxxxxx",
+    "owner": "919080896537",
     "mods": [
-      "628xxxxxxx"
+      "919080896537"
      ],
     "public": false
 }
